Fixed right sidebar panel left spacing

--- a/src/styles/sass/andromeda/doc-mgt/_styles.scss
+++ b/src/styles/sass/andromeda/doc-mgt/_styles.scss
@@ -168,11 +168,11 @@ $search-expanded-width: 400px;
 ---------------------------------------- */
 .sidebar{
   // font-size: 10px;
+  margin-left: 14px;
   background: rgba(255,255,255, .5);
   
   .sidebar-details{
     padding: 0 20px;
-    margin-left: 20px;
   }
   
   .fixed-title{
